# Evaluation_code_SGP2017

./: README.md  dataset_generation.cpp  global_functions.h  global_types.h  io.cpp  io.h
ellipticalSolving/ddMultigrid/: CMakeLists.txt  DACGSolver.h  DHMAdaptiveMesh.cpp  DHMAdaptiveMesh.h  DHMAdvection.cpp  DHMAdvection.h  DHMCoarser.cpp  DHMCoarser.h  DHMCoarserConformal.cpp  DHMCoarserConformal.h  DHMDiscreteGrid.h  DHMEnergy.cpp  DHMEnergy.h  DHMField.cpp  DHMField.h  DHMIter.h  DHMLinearSolver.cpp  DHMLinearSolver.h  DHMMesh.cpp  DHMMesh.h  DHMParticleSet.cpp  DHMParticleSet.h  DHMSmokeFire.cpp  DHMSmokeFire.h  DHMSmoother.cpp  DHMSmoother.h  DHMTraits.h  DHMUtil.cpp  DHMUtil.h  DHMWater.cpp  DHMWater.h  GaussLegendre.cpp  GaussLegendre.h  MainConfig.cpp  MainConfig.h  ParamList.txt  main.cpp  modal_analysis.cpp  modal_analysis_m.cpp  modal_analysis_time.cpp  (+5 more)
ellipticalSolving/ddMultigrid/CommonFile/: CMakeLists.txt  CollisionDetection.h  CollisionDetection.h.orig  CollisionFunc.h  CollisionFunc.h.orig  ComputeWeightInterface.cpp  ComputeWeightInterface.cpp.orig  ComputeWeightInterface.h  ComputeWeightInterface.h.orig  Config.h  DisjointSet.h  DisjointSet.h.orig  GridBasic.h  GridBasic.h.orig  GridOp.h  GridOp.h.orig  Heap.h  Heap.h.orig  IO.cpp  IO.cpp.orig  IO.h  IO.h.orig  IOBasic.cpp  IOBasic.cpp.orig  IOBasic.h  IOBasic.h.orig  ImplicitFunc.cpp  ImplicitFunc.cpp.orig  ImplicitFunc.h  ImplicitFunc.h.orig  ImplicitFuncInterface.h  ImplicitFuncInterface.h.orig  ImplicitFuncUtils.h  ImplicitFuncUtils.h.orig  MakeMesh.cpp  MakeMesh.cpp.orig  MakeMesh.h  MakeMesh.h.orig  MarchingCube2D.h  MarchingCube2D.h.orig  (+31 more)
ellipticalSolving/ddMultigrid/CommonFile/geom/: BVHBuilder.h  BVHBuilder.h.orig  StaticGeom.cpp  StaticGeom.cpp.orig  StaticGeom.h  StaticGeomCell.cpp  StaticGeomCell.cpp.orig  StaticGeomCell.h
ellipticalSolving/ddMultigrid/CommonFile/gui/: Console.cpp  Console.cpp.orig  Console.h  Console.h.orig  FPSCamera.cpp  FPSCamera.cpp.orig  FPSCamera.h  FPSCamera.h.orig  PVSMScene.cpp  PVSMScene.cpp.orig  PVSMScene.h  PVSMScene.h.orig  PerPixelFrag.txt  PerPixelVert.txt  Renderer.cpp  Renderer.cpp.orig  Renderer.h  Renderer.h.orig  StaticDraw.cpp  StaticDraw.cpp.orig  StaticDraw.h  StaticDraw.h.orig  VSMBlurFrag.txt  VSMDepthFrag.txt  VSMDepthVert.txt  glsl.cpp  glsl.cpp.orig  glsl.h  glsl.h.orig
ellipticalSolving/ddMultigrid/CommonFile/hpacxx/cxxsrc/: read_item.cc  xcomplex.cc  xcomplex.h  xcomplex.h.orig  xreal.cc  xreal.h  xreal.h.orig
ellipticalSolving/ddMultigrid/CommonFile/hpacxx/src/: cxpre.h  xpre.h
ellipticalSolving/ddMultigrid/CommonFile/hpacxx/src/mp/: const07.h  const11.h  const15.h  const19.h  const23.h  const27.h  const31.h
ellipticalSolving/ddMultigrid/CommonFile/solvers/: AGMGSolver.h  AINVPreconditioner.h  AMGSolver.h  BlockedSolver.h  BlockedSolver.h.orig  Callback.h  DACGSolver.h  DACGSolver.h.orig  KrylovMatrix.h  KrylovMatrix.h.orig  LinearSolver.h  MatVec.h  MatVec.h.orig  Minimizer.h  Minimizer.h.orig  Objective.h  Objective.h.orig  Optimization.cpp  Optimization.cpp.orig  Optimization.h  Optimization.h.orig  PMinres.h  PMinres.h.orig  PMinresQLP.h  PMinresQLP.h.orig  QPSolver.h  QPSolver.h.orig  ReadMatlabProb.h  ReadMatlabProb.h.orig  writeProb.m
ellipticalSolving/ddMultigrid/CommonFile/solvers/alglib/: alglibinternal.cpp  alglibinternal.cpp.orig  alglibinternal.h  alglibmisc.cpp  alglibmisc.cpp.orig  alglibmisc.h  ap.cpp  ap.cpp.orig  ap.h  dataanalysis.cpp  dataanalysis.cpp.orig  dataanalysis.h  diffequations.cpp  diffequations.cpp.orig  diffequations.h  fasttransforms.cpp  fasttransforms.cpp.orig  fasttransforms.h  integration.cpp  integration.cpp.orig  integration.h  interpolation.cpp  interpolation.cpp.orig  interpolation.h  linalg.cpp  linalg.cpp.orig  linalg.h  optimization.cpp  optimization.cpp.orig  optimization.h  solvers.cpp  solvers.cpp.orig  solvers.h  specialfunctions.cpp  specialfunctions.cpp.orig  specialfunctions.h  statistics.cpp  statistics.cpp.orig  statistics.h
hexdataGen/: CMakeLists.txt  dataset_generation.h  global_functions.cpp  global_types.cpp  hex_metrics.cpp  hex_metrics.h  main.cpp
