PROJECT(CommonFile)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# EIGEN3
FIND_PACKAGE(Eigen3 QUIET REQUIRED)
IF(EIGEN3_FOUND)
  INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})
  MESSAGE(STATUS "Found EIGEN3 @ ${EIGEN3_INCLUDE_DIR}")
ELSE(EIGEN3_FOUND)
  MESSAGE(SEND_ERROR "Cannot find eigen3")
ENDIF(EIGEN3_FOUND)

# BOOST
SET(Boost_USE_MULTITHREADED ON)
FIND_PACKAGE(Boost QUIET REQUIRED filesystem system)
IF(Boost_FOUND)
  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
  MESSAGE(STATUS "Found Boost @ ${Boost_INCLUDE_DIR}")
ELSE(Boost_FOUND)
  MESSAGE(SEND_ERROR "Cannot find boost")
ENDIF(Boost_FOUND)

# GLEW
FIND_PACKAGE(GLEW QUIET REQUIRED)
IF(GLEW_FOUND)
  INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIR})
  MESSAGE(STATUS "Found GLEW @ ${GLEW_INCLUDE_DIR}")
ELSE(GLEW_FOUND)
  MESSAGE(SEND_ERROR "Cannot find GLEW")
ENDIF(GLEW_FOUND)

# glut
FIND_PACKAGE(GLUT QUIET REQUIRED)
IF(GLUT_FOUND)
  INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIR})
  MESSAGE(STATUS "Found GLUT @ ${GLUT_INCLUDE_DIR}")
ELSE(GLUT_FOUND)
  MESSAGE(SEND_ERROR "Cannot find GLUT")
ENDIF(GLUT_FOUND)

# glu
FIND_PACKAGE(OpenGL QUIET REQUIRED)
IF(OPENGL_FOUND)
  INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
  MESSAGE(STATUS "Found OPENGL @ ${OPENGL_INCLUDE_DIR}")
ELSE(OPENGL_FOUND)
  MESSAGE(SEND_ERROR "Cannot find OPENGL")
ENDIF(OPENGL_FOUND)

# SuiteSparse
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/")
FIND_PACKAGE(SuiteSparse REQUIRED)
IF(SuiteSparse_FOUND)
  INCLUDE_DIRECTORIES(${SuiteSparse_INCLUDE_DIRS})
  MESSAGE(STATUS "Found SuiteSparse @ ${SuiteSparse_INCLUDE_DIRS}")
ELSE(SuiteSparse_FOUND)
  MESSAGE(SEND_ERROR "Cannot find SuiteSparse")
ENDIF(SuiteSparse_FOUND)

FILE(GLOB_RECURSE CommonFile_SRC  *.cc *.h *.c *.cpp)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/CommonFile)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/CommonFile/hpacxx/src)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/CommonFile/hpacxx/cxxsrc)

ADD_LIBRARY(CommonFile ${CommonFile_SRC})
TARGET_LINK_LIBRARIES(CommonFile ${Boost_LIBRARIES} ${GLEW_LIBRARIES} ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES} ${SuiteSparse_LIBRARIES} gomp)

#look out don't spoil ubuntu's filesystem
#SET(CMAKE_INSTALL_PREFIX "home/Documents/usr/local")
#MESSAGE(STATUS "Install @ ${CMAKE_INSTALL_PREFIX}")

#INSTALL(FILES ${header} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/CommonFile)
#INSTALL(FILES ${solver_header} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/CommonFile/solvers)
#INSTALL(FILES ${geom_header} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/CommonFile/geom)
#INSTALL(FILES ${gui_header} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/CommonFile/gui)
#INSTALL(FILES ${hpacxx_header} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/CommonFile/hpacxx)
#INSTALL(TARGETS CommonFile DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)

